--- a/main.css
+++ b/main.css
@@ -6,6 +6,13 @@ body{
     margin: 0;
 }
 
+footer {
+    text-align: center;
+    padding: 3px;
+    background-color: DarkSalmon;
+    color: white;
+}
+
 ul{
     list-style-type: none;
     margin: 0;
