--- a/main.css
+++ b/main.css
@@ -7,10 +7,7 @@ body{
 }
 
 footer {
-    text-align: center;
-    padding: 3px;
-    background-color: DarkSalmon;
-    color: white;
+    text-align: justify;
 }
 
 ul{
