--- a/main.css
+++ b/main.css
@@ -6,18 +6,14 @@ body{
     margin: 0;
 }
 
-footer {
-    text-align: justify;
-}
-
-ul{
+.ul1{
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: black;
 }
-li{
+.li1 {
     float: left;
     border-right: 1px solid black;
 }
@@ -38,18 +34,18 @@ li a:hover{
 .img{
     display: block;
 
-
 }
 .img2{
     clear: right;
 }
-p.round{
+ul.round{
     border: 2px solid black;
     border-radius: 5px;
     margin: auto;
     background-color: lightgrey;
-    text-align: center;
-    max-width: 300px;
+    text-align: left;
+    width: 335px;
+
     display: block;
 }
 p.round1{
@@ -71,5 +67,11 @@ p.round2{
     max-width: 700px;
     display: block;
 }
+footer{
+    display: flex;
+    justify-content: space-evenly;
+    color: darkred;
+}
+
 
 
